[tool.poetry]
name = "field-observatory-s3"
version = "0.1.0"
description = ""
authors = ["Olli Nevalainen <olli.nevalainen.fmi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.9"
pandas = "^2.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
